# PositionBasedDynamics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
CMake/: Common.cmake  DataCopyTargets.cmake  FindEigen3.cmake
Common/: Common.h
Demos/: CMakeLists.txt
Demos/ClothDemo/: CMakeLists.txt  README.md  main.cpp
Demos/Common/: DemoBase.cpp  DemoBase.h  LogWindow.cpp  LogWindow.h  Simulator_GUI_imgui.cpp  Simulator_GUI_imgui.h  imguiParameters.cpp  imguiParameters.h
Demos/Visualization/: MiniGL.cpp  MiniGL.h  Shader.cpp  Shader.h  Visualization.h
PositionBasedDynamics/: CMakeLists.txt  DirectPositionBasedSolverForStiffRodsInterface.h  MathFunctions.cpp  MathFunctions.h  PositionBasedDynamics.cpp  PositionBasedDynamics.h  PositionBasedElasticRods.cpp  PositionBasedFluids.cpp  PositionBasedFluids.h  PositionBasedRigidBodyDynamics.cpp  PositionBasedRigidBodyDynamics.h  SPHKernels.cpp  SPHKernels.h  TimeIntegration.cpp  TimeIntegration.h  XPBD.cpp  XPBD.h
Simulation/: AABB.h  BoundingSphere.h  BoundingSphereHierarchy.cpp  BoundingSphereHierarchy.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Constraints.cpp  Constraints.h  CubicSDFCollisionDetection.cpp  DistanceFieldCollisionDetection.cpp  DistanceFieldCollisionDetection.h  IDFactory.cpp  IDFactory.h  LineModel.cpp  LineModel.h  NeighborhoodSearchSpatialHashing.cpp  ParticleData.h  RigidBody.h  RigidBodyGeometry.cpp  RigidBodyGeometry.h  Simulation.cpp  Simulation.h  SimulationModel.cpp  SimulationModel.h  TetModel.cpp  TetModel.h  TimeManager.cpp  TimeManager.h  TimeStep.cpp  TimeStep.h  TimeStepController.cpp  TriangleModel.cpp  TriangleModel.h  kdTree.h  kdTree.inl
Utils/: CMakeLists.txt  FileSystem.h  Hashmap.h  IndexedFaceMesh.cpp  IndexedFaceMesh.h  IndexedTetMesh.cpp  IndexedTetMesh.h  Logger.h  OBJLoader.h  ObjectArray.h  PLYLoader.h  SceneLoader.cpp  SceneLoader.h  StringTools.h  SystemInfo.h  TetGenLoader.cpp  TetGenLoader.h  Timing.h  Version.h  Version.h.in  VolumeIntegration.cpp  VolumeIntegration.h
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindOpenMesh.cmake  libigl.cmake
include/: PositionBasedDynamics.h
shared/include/: Common.h  DemoBase.h  visualization.h
shared/src/: DemoBase.cpp  visualization.cpp
src/: glad.c  main.cpp  window.cpp  window.h
